syntax = "proto3";

option go_package = "../service";

package service;

message CommentRequest{
  int64 author_id=1;
  int32 action_type=2;
  int32 comment_id=3;
  int32 video_id=4;
  string msg=5;
  string token=6;
}

message ListRequest{
  int32 video_id=1;
  string token=2;
}

message CommentOperationResponse{
  int32 status_code=1;
  string status_msg=2;
  CommentBody comment=3;
}

message ListCommentsResponse{
  int32 status_code=1;
  string status_msg=2;
  repeated CommentBody comment_list=3;
}

message CommentBody{
  int32 id=1;
  CommentUser user=2;
  string content=3;
  string create_date=4;
}

message CommentUser{
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;  // 关注总数
  int64 follower_count = 4;  // 粉丝总数
  bool is_follow = 5;
}

service Comment{
  rpc OperateComment(CommentRequest) returns (CommentOperationResponse) {}
  rpc ListComments(ListRequest) returns (ListCommentsResponse) {}
}
